after two anchors

--- a/frontend/specificpage/specificpage.html
+++ b/frontend/specificpage/specificpage.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Page Web Init!</h1>
-    <a href="secondindex.html"> click second page</a>
-    <a href="./specificpage/specificpage.html">Especific</a>
-    <button>Click to second Page</button>
+    <h1>Especific HTML Page!</h1>
 </body>
 </html>
